# statistics-FastAPI

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  wsgi-entrypoint.sh
core/: database.py  settings.py
mainapp/: models.py  schemas.py  services.py  views.py
migrations/: env.py
migrations/versions/: 38327310accd_change_datetime.py  66694a72f2a7_change_datetime.py  d56fe57b1b05_database_creation.py
postgres_data/base/1/: 2619
postgres_data/base/16384/: 1247  1249  1259  16385  16388  16390  16396  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
postgres_data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
postgres_data/pg_stat/: db_0.stat  db_13423.stat  db_16384.stat  global.stat
