[tool.poetry]
name = "statistics-fastapi"
version = "0.1.0"
description = ""
authors = ["Beknazar Abdyldaev <abdyldaev.duff@gmail.com>"]
readme = "README.md"
packages = [{include = "statistics_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
pydantic = "^1.10.2"
sqlalchemy = "^1.4.45"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.0"
databases = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
